--- a/about.pug
+++ b/about.pug
@@ -9,7 +9,7 @@ block style
 
 block content
     h1 About Us
-    p1 Welcome to BookLobe!!
+    p1 Welcome to BookLobe!!!
     br
     p Our main Motto : &quot;To develop a platform which can help students to provide all type of educational books with a user friendly experience.&ldquo;
     p        It is an Educational blog made solely for students who are deprived of study material due to many reasons. We provide material that is Accessible, Affordable, Helpful , Technology driven. We are here with the idea of &quot;educational eBooks &quot; where you can find books for various educational topics, competitive or any other course at affordable price and at greater convenience. Get desired books and almost every material you require just in few clicks. You can access most books free and also get some extra benefits on subscription. It might have some in app purchases at the most affordable price. You can have access to two device.
